linux-2.6-openmoko (20090702.gitd1c828aa-2) UNRELEASED; urgency=low

  * debian/config.gta02:
    + CONFIG_TASKSTAT=y, CONFIG_TASK_DELAY_ACCT=y, CONFIG_TASK_XACCT=y
      and CONFIG_TASK_IO_ACCOUNTING=y.

 --

linux-2.6-openmoko (20090702.gitd1c828aa-1) pkg-fso; urgency=low

  * New Git checkout.

 -- Luca Capello <luca@pca.it>  Sun, 19 Jul 2009 18:07:16 +0200

linux-2.6-openmoko (20090610.gitd7ac922b-2) pkg-fso; urgency=low

  * debian/config.gta02:
    + merge arch/arm/configs/gta02_moredrivers_defconfig.
    + CONFIG_EXT4_FS=m and CONFIG_EXT4_FS_POSIX_ACL=y.
    - CONFIG_MTD_PHYSMAP_START, CONFIG_MTD_PHYSMAP_LEN and
      CONFIG_MTD_PHYSMAP_BANKWIDTH removed, it is better to
      set them at run-time.
    - CONFIG_DM9102 removed, useless.
    - CONFIG_NR_TTY_DEVICES removed, no limit on Debian.
    - CONFIG_LOCALVERSION_AUTO is not set.
    - CONFIG_MMC_SDHCI is not set, this kind of hardware does not
      exist on the Samsung's S3C24XX SoC CPUs.
    - remove leftover CONFIG_REISERFS_FS comment.
  * debian/control:
    + use the full GTA02 name in the Description:.

 -- Luca Capello <luca@pca.it>  Mon, 15 Jun 2009 10:26:56 +0200

linux-2.6-openmoko (20090610.gitd7ac922b-1) pkg-fso; urgency=low

  * New Git checkout.
  * debian/config.gta02:
    - CONFIG_POWER_SUPPLY_DEBUG is not set.
    - CONFIG_RTC_DEBUG is not set.
  * debian/gbp.conf:
    + always use pristine-tar.

 -- Luca Capello <luca@pca.it>  Thu, 11 Jun 2009 09:40:40 +0200

linux-2.6-openmoko (20090303.gitb9de904e-2) pkg-fso; urgency=low

  * debian/rules:
    - remove /lib/firmware/ from the linux-image-2.6.29-openmoko-gta02
      package, these binary blobs do not belong there.

 -- Luca Capello <luca@pca.it>  Thu, 19 Mar 2009 01:37:53 +0100

linux-2.6-openmoko (20090303.gitb9de904e-1) pkg-fso; urgency=low

  * New Git Checkout:
    + back to use the first 8 digits to identify the Git commit
      (Philipp was correct, it seems this is the standard).
    + now at Linux kernel version 2.6.29.