@@ -2,11 +2,22 @@
 
 set -e
 
+VERSION=@PACKAGE_VERSION@
+
 # Remove the /boot/uImage.bin symlink
 if [ "$1" = "remove" -o "$1" = "upgrade" ]; then
-    VERSION=@PACKAGE_VERSION@
     UBOOT_IMAGE=/boot/uImage.bin
     if [ "`readlink $UBOOT_IMAGE`" = "uImage.bin-$VERSION" ]; then
 	rm -f "$UBOOT_IMAGE"
     fi
+fi
+
+# Remove the depmod modules.* files
+if [ "$1" = "remove" -o "$1" = "upgrade" ]; then
+    MODULES_BASE="/lib/modules/$VERSION/"
+    for I in modules.alias modules.alias.bin \
+	modules.dep modules.dep.bin \
+	modules.symbols modules.symbols.bin; do
+	rm -f "$MODULES_BASE/$I"
+    done
 fi
