@@ -3,6 +3,10 @@ linux-2.6-openmoko (20090702.gitd1c828aa-2) UNRELEASED; urgency=low
   * debian/config.gta02:
     + CONFIG_TASKSTAT=y, CONFIG_TASK_DELAY_ACCT=y, CONFIG_TASK_XACCT=y
       and CONFIG_TASK_IO_ACCOUNTING=y.
+  * debian/postinst.in:
+    + generate the depmod modules.* files when configuring.
+  * debian/prerm.in:
+    - remove the depmod modules.* files when removing or upgrading.
 
  --
 
